--- a/contact.html
+++ b/contact.html
@@ -521,7 +521,7 @@
                 }
         
                 try {
-                    const response = await fetch('http://localhost:5000/api/contact', {
+                    const response = await fetch('https://panvel-placement-backend.onrender.com/api/contact', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
@@ -570,7 +570,8 @@
                 });
             });
         });
-        </script>
+    </script>
+    
 
     <!-- bootstrap js -->
     <script defer src="/assets/js/bootstrap.bundle.min.js"></script>
