--- a/apply.html
+++ b/apply.html
@@ -152,7 +152,7 @@
       formData.append('jobId', jobId);
   
       try {
-        const response = await fetch('http://localhost:5000/api/apply', {  // <<----- updated endpoint
+        const response = await fetch('https://panvel-placement-backend.onrender.com/api/apply', {  // <<----- updated endpoint to the production URL
           method: 'POST',
           body: formData,
         });
@@ -170,7 +170,7 @@
       }
     });
   </script>
-
+  
 
 </body>
 </html>
