login functionality is almost set. favicons have been added to all the pages

--- a/admin-login.html
+++ b/admin-login.html
@@ -3,11 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin Login</title>
+  <!-- favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16x16.png">
+  <link rel="icon" href="/assets/img/favicons/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="192x192" href="/assets/img/favicons/android-chrome-192x192.png">
+  <link rel="manifest" href="/assets/img/favicons/site.webmanifest">
+  <meta name="theme-color" content="#ffffff">
+  <title>Admin Login - Panvel Placement</title>
   <link rel="stylesheet" href="assets/css/admin-login.css" />
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
+  <!-- Check if user is already logged in -->
+  <script>
+    if (localStorage.getItem("isAdminLoggedIn") === "true") {
+      window.location.href = "admin-dashboard.html"; // Redirect to dashboard if already logged in
+    }
+  </script>
+
   <div class="login-container">
     <h2 class="gradient-text">Admin Login</h2>
     <form id="adminLoginForm">
@@ -21,29 +35,45 @@
   <script>
     document.getElementById("adminLoginForm").addEventListener("submit", async function (e) {
       e.preventDefault();
-      const username = document.getElementById("username").value;
-      const password = document.getElementById("password").value;
-
+      
+      const username = document.getElementById("username").value.trim();
+      const password = document.getElementById("password").value.trim();
+      const errorEl = document.getElementById("error");
+  
+      if (!username || !password) {
+        errorEl.innerText = "Both fields are required.";
+        return;
+      }
+  
       try {
-        const res = await fetch("http://127.0.0.1:5000/admin/login", {
-  method: "POST",
-  headers: { "Content-Type": "application/json" },
-  body: JSON.stringify({ username, password })
-});
-
-const data = await res.json();
-if (data.success) {
-  // Ensure this redirects to your frontend dashboard page
-  window.location.href = "http://127.0.0.1:5500/admin-dashboard.html";  // Redirect to the frontend dashboard
-} else {
-  document.getElementById("error").innerText = data.message;  // Show error message
-}
-
-      } catch (error) {
-        console.error("Error during login:", error);
-        document.getElementById("error").innerText = "An error occurred. Please try again later.";
+        const res = await fetch("https://panvel-placement-backend.onrender.com/admin/login", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ username, password }),
+        });
+  
+        const data = await res.json();
+  
+        if (res.ok && data.success) {
+          // ✅ Store the token for future validation
+          if (data.token) {
+            localStorage.setItem("token", data.token); // Use this in other pages to authorize
+          }
+  
+          localStorage.setItem("isAdminLoggedIn", "true");
+  
+          // ✅ Redirect to dashboard
+          window.location.href = "admin-dashboard.html";
+        } else {
+          errorEl.innerText = data.message || "Invalid credentials.";
+        }
+  
+      } catch (err) {
+        console.error("Login error:", err);
+        errorEl.innerText = "An error occurred. Please try again.";
       }
     });
   </script>
+  
 </body>
 </html>
