--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Panvel Placement</title>
-    
     <meta name="description"
         content="Panvel Placement is the best recruitment agency in Navi Mumbai, connecting freshers and experienced professionals with top companies.">
     <meta name="keywords"
@@ -19,6 +18,13 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Panvel Placement">
     <meta property="og:locale" content="en_US">
+    <!-- favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16x16.png">
+  <link rel="icon" href="/assets/img/favicons/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="192x192" href="/assets/img/favicons/android-chrome-192x192.png">
+  <link rel="manifest" href="/assets/img/favicons/site.webmanifest">
+  <meta name="theme-color" content="#ffffff">
 
     <!-- Google Maps Structured Data -->
     <script type="application/ld+json">
