--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Panvel Placement">
     <meta property="og:locale" content="en_US">
-
+    <!-- favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16x16.png">
+  <link rel="icon" href="/assets/img/favicons/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="192x192" href="/assets/img/favicons/android-chrome-192x192.png">
+  <link rel="manifest" href="/assets/img/favicons/site.webmanifest">
+  <meta name="theme-color" content="#ffffff">
     <!-- Google Maps Structured Data -->
     <script type="application/ld+json">
         {
@@ -128,7 +134,7 @@
             </div>
         </nav>
         <!-- navbar ends -->
-    </header>
+    </header> 
 
     <main>
         <!-- hero section starts -->
@@ -136,13 +142,13 @@
         <section class="hero">
             <!-- Background images that will rotate -->
             <div class="hero-background"
-                style="background-image: url('https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');">
+                style="background-image: url('/assets/img/heroSection1.webp');">
             </div>
             <div class="hero-background"
-                style="background-image: url('https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');">
+                style="background-image: url('/assets/img/heroSection2.webp');">
             </div>
             <div class="hero-background"
-                style="background-image: url('https://images.unsplash.com/photo-1521791136064-7986c2920216?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');">
+                style="background-image: url('/assets/img/heroSection3.webp');">
             </div>
 
             <!-- Dark overlay -->
