--- a/registration.html
+++ b/registration.html
@@ -19,7 +19,13 @@
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Panvel Placement">
   <meta property="og:locale" content="en_US">
-
+  <!-- favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16x16.png">
+  <link rel="icon" href="/assets/img/favicons/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="192x192" href="/assets/img/favicons/android-chrome-192x192.png">
+  <link rel="manifest" href="/assets/img/favicons/site.webmanifest">
+  <meta name="theme-color" content="#ffffff">
   <!-- Google Maps Structured Data -->
   <script type="application/ld+json">
 {
@@ -130,7 +136,8 @@
     <!-- navbar ends -->
   </header>
 
-  <div class="container" style="border: 1px solid black; margin: 20px auto; padding: 20px; border-radius: 20px; box-shadow: 5px 5px 10px rgba(100, 100, 200, 0.5);">
+  <div class="container"
+    style="border: 1px solid black; margin: 20px auto; padding: 20px; border-radius: 20px; box-shadow: 5px 5px 10px rgba(100, 100, 200, 0.5);">
     <div class="form-header">
       <h1>Registration Form</h1>
       <p>Complete the form below to register with Panvel Placement and kickstart your career</p>
@@ -213,7 +220,8 @@
         <div class="input-group">
           <label for="resume">Upload Resume (PDF) *</label>
           <div class="file-upload">
-            <label for="resume" class="file-upload-label" style="color: #ffffff; background-color: var(--hover-color); border: 1px solid var(--hover-color);">
+            <label for="resume" class="file-upload-label"
+              style="color: #ffffff; background-color: var(--hover-color); border: 1px solid var(--hover-color);">
               Choose File
             </label>
             <input type="file" id="resume" name="resume" accept=".pdf" required>
