--- a/jobs.html
+++ b/jobs.html
@@ -5,24 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Active Jobs: Job Portal ViMEET</title>
-    
     <meta name="description"
-    content="Panvel Placement is the best recruitment agency in Navi Mumbai, connecting freshers and experienced professionals with top companies.">
-<meta name="keywords"
-    content="Panvel Placement, Recruitment Agency, Navi Mumbai Jobs, Job Vacancies, Employment Services">
-<meta name="author" content="Panvel Placement">
-<meta name="robots" content="index, follow">
-<meta property="og:title" content="Panvel Placement - Best Recruitment Agency in Navi Mumbai">
-<meta property="og:description"
-    content="Offering expert job placement services in Panvel, Navi Mumbai since 2018. Find your dream job today!">
-<meta property="og:image" content="/assets/img/logo/navbarLogo.png">
-<meta property="og:url" content="https://www.panvelplacement.in">
-<meta property="og:type" content="website">
-<meta property="og:site_name" content="Panvel Placement">
-<meta property="og:locale" content="en_US">
-
-<!-- Google Maps Structured Data -->
-<script type="application/ld+json">
+        content="Panvel Placement is the best recruitment agency in Navi Mumbai, connecting freshers and experienced professionals with top companies.">
+    <meta name="keywords"
+        content="Panvel Placement, Recruitment Agency, Navi Mumbai Jobs, Job Vacancies, Employment Services">
+    <meta name="author" content="Panvel Placement">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Panvel Placement - Best Recruitment Agency in Navi Mumbai">
+    <meta property="og:description"
+        content="Offering expert job placement services in Panvel, Navi Mumbai since 2018. Find your dream job today!">
+    <meta property="og:image" content="/assets/img/logo/navbarLogo.png">
+    <meta property="og:url" content="https://www.panvelplacement.in">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Panvel Placement">
+    <meta property="og:locale" content="en_US">
+    <!-- favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16x16.png">
+    <link rel="icon" href="/assets/img/favicons/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="192x192" href="/assets/img/favicons/android-chrome-192x192.png">
+    <link rel="manifest" href="/assets/img/favicons/site.webmanifest">
+    <meta name="theme-color" content="#ffffff">
+    <!-- Google Maps Structured Data -->
+    <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
@@ -52,29 +57,29 @@
     }
     </script>
 
-<!-- bootstrap css -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <!-- bootstrap css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 
-<!-- css -->
-<link rel="stylesheet" href="/assets/css/main.min.per.css">
-<link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-<link rel="stylesheet" href="/assets/css/style.css">
-<link rel="stylesheet" href="/assets/css/resp.css">
-<link rel="stylesheet" href="/assets/css/jobs.css">
+    <!-- css -->
+    <link rel="stylesheet" href="/assets/css/main.min.per.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/resp.css">
+    <link rel="stylesheet" href="/assets/css/jobs.css">
 
 
-<!-- font awesome -->
-<script src="https://kit.fontawesome.com/7ab50d13be.js" crossorigin="anonymous"></script>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/7ab50d13be.js" crossorigin="anonymous" defer></script>
 
-<!-- google fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
-    rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap"
-    rel="stylesheet">
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -190,7 +195,9 @@
                         </select>
                     </div>
 
-                    <button id="applyFilters" class="btn btn-primary w-100" style="background: linear-gradient(to right, #e74c3c, #ea0857, #de007a, #be00a3, #7c10cb);">Apply Filters</button>
+                    <button id="applyFilters" class="btn btn-primary w-100"
+                        style="background: linear-gradient(to right, #e74c3c, #ea0857, #de007a, #be00a3, #7c10cb);">Apply
+                        Filters</button>
                 </div>
             </div>
 
